<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_terminal"
        android:icon="@drawable/ic_nav_terminal"
        android:title="@string/nav_terminal" />

    <item
        android:id="@+id/nav_files"
        android:icon="@drawable/ic_nav_files"
        android:title="@string/nav_files" />

    <item
        android:id="@+id/nav_packages"
        android:icon="@drawable/ic_nav_packages"
        android:title="@string/nav_packages" />

    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/ic_nav_tools"
        android:title="@string/nav_tools" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>
