<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_md"
    android:paddingEnd="@dimen/space_md"
    android:paddingTop="@dimen/space_md"
    android:paddingBottom="@dimen/space_sm">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_swatch_label"
        android:textColor="@color/color_text_secondary"
        android:textSize="11sp"
        android:paddingBottom="@dimen/space_sm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_swatch_bg"
                android:textColor="@color/color_text_secondary"
                android:textSize="9sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color_surface">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_swatch_surface"
                android:textColor="@color/color_text_secondary"
                android:textSize="9sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color_accent_primary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_swatch_accent"
                android:textColor="@color/color_background"
                android:textSize="9sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/color_accent_secondary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_swatch_secondary"
                android:textColor="@color/color_text_primary"
                android:textSize="9sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
